// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar > Snapshot > should match snapshot with active search 1`] = `
<div
  class="relative max-w-md"
>
  <div
    class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted-foreground"
    data-testid="search-icon"
  >
    Search
  </div>
  <input
    class="pl-9 pr-9"
    data-testid="search-input"
    placeholder="Search plugins by name, title, or description..."
    type="text"
    value="test plugin"
  />
  <button
    aria-label="Clear search"
    class="absolute right-3 top-1/2 -translate-y-1/2 text-muted-foreground hover:text-foreground transition-colors"
  >
    <div
      class="h-4 w-4"
      data-testid="x-icon"
    >
      X
    </div>
  </button>
</div>
`;

exports[`SearchBar > Snapshot > should match snapshot with empty search 1`] = `
<div
  class="relative max-w-md"
>
  <div
    class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted-foreground"
    data-testid="search-icon"
  >
    Search
  </div>
  <input
    class="pl-9 pr-9"
    data-testid="search-input"
    placeholder="Search plugins by name, title, or description..."
    type="text"
    value=""
  />
</div>
`;

exports[`SearchBar > Snapshot > should match snapshot with no results 1`] = `
<div
  class="relative max-w-md"
>
  <div
    class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted-foreground"
    data-testid="search-icon"
  >
    Search
  </div>
  <input
    class="pl-9 pr-9"
    data-testid="search-input"
    placeholder="Search plugins by name, title, or description..."
    type="text"
    value="nonexistent"
  />
  <button
    aria-label="Clear search"
    class="absolute right-3 top-1/2 -translate-y-1/2 text-muted-foreground hover:text-foreground transition-colors"
  >
    <div
      class="h-4 w-4"
      data-testid="x-icon"
    >
      X
    </div>
  </button>
</div>
`;
